app/components-react/windows/go-live/GoLive.m.less
@import '../../../styles/index.less';

.settings-row {
  height: 100%;
  margin: 0px !important;

  :global(.ant-col) {
    padding: 0px;
  }
}

.right-column {
  height: 100%;
  background-color: var(--background);
  overflow: hidden;
  padding: 15px !important;

  :global(label.ant-form-item-required) {
    flex-direction: row-reverse;
  }

  :global(label.ant-form-item-required::before) {
    margin-left: 4px;
  }

  :global(.ant-form-item-label > label) {
    height: unset;
  }
}

.platform-switcher {
  .radius();

  box-sizing: border-box;
  display: flex;
  margin: 15px 0px;
  padding: 10px;
  flex-direction: column;
  color: var(--title);
  background: var(--dropdown-bg);
  transition: transform 0.05s;
  cursor: pointer;
}

.platform-disabled {
  opacity: 0.7;
  background: rgba(#2b383f, 0.3);
}

.switcher-header {
  display: flex;
  flex: 1;
  justify-content: space-between;
}

.platform-info-wrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
}

.platform-info {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin: 0px 5px;
}

.platform-name {
  font-size: 16px;
  font-weight: 600;
}

.platform-username {
  color: var(--link);
  overflow-wrap: break-word;
  display: inline-block;
  word-break: break-word;
  white-space: pre-line;
}

.platform-switch {
  justify-self: flex-end;
  color: var(--background);

  :global(.ant-form-item-label) {
    display: none;
  }

  :global(.ant-switch-small) {
    min-width: 36px;
    height: 21px;
    line-height: 21px;
  }

  :global(.ant-switch-small .ant-switch-handle) {
    width: 15px;
    height: 15px;
    top: 3px;
    left: 3px;
  }

  :global(.ant-switch-small.ant-switch-checked .ant-switch-handle) {
    left: calc(100% - 15px - 3px) !important;
  }

  :global(.ant-switch-inner i) {
    color: var(--background);
    display: flex;
    align-self: center;
  }
}

.platform-display {
  display: flex;
  flex: 1;
  justify-content: space-between;

  :global(.ant-radio-group.ant-radio-group-outline .ant-space) {
    gap: 0 !important;
  }
}

.display-selector {
  :global(label.ant-radio-wrapper) {
    margin: 0px !important;
  }
}

.label {
  align-self: center;
  margin-right: 10px;
  flex-grow: 1;
}

.platforms-selector {
  &:global(.ant-select) {
    width: 100%;
    text-align: left;
    margin: 0px;
  }

  &:global(.ant-select.dual-output-selector) {
    width: calc(100% - 30px) !important;
    margin: 0px 15px !important;
  }
}

i.icon {
  font-size: 14px;
  margin-right: 10px;
  color: var(--paragraph);
}

i.selector-icon {
  margin-right: 10px !important;
  font-size: 15px !important;
  width: 15px !important;
  height: 15px !important;
  color: var(--section) !important;
}

.platform-logo {
  margin: 5px 5px 0 0;
}

i.destination-logo {
  margin: 5px 5px 0 0;
  font-size: 30px;
}

.option-btn {
  border: 1px solid var(--nav-icon-inactive);
}

.go-live-settings {
  height: 100%;

  &:global(a) {
    color: var(--teal);
  }
}

.column-padding {
  padding: 0px 15px;
}

.left-column {
  height: 100%;
  width: 100%;
  border-right: 1px solid var(--border);
  padding: 0px !important;
  display: flex;
  flex-direction: column;
  background-color: var(--bg-column);
  justify-content: space-between;
}

.left-footer {
  border-top: 1px solid var(--border);
  margin: 15px 0px 15px 15px;
  padding-top: 15px;
  width: calc(100% - 30px);
}

.dual-output-go-live {
  height: 100%;

  &:global(a) {
    color: var(--teal);
  }

  :global(.ant-modal-body) {
    padding: 0px;
  }
}

.section {
  .margin-bottom(2);
  .padding-right(2);
  border-top: 1px solid var(--border);
  background-color: var(--section);

  &:first-child {
    border-top: none;
  }

  h2 {
    .margin-top(2);
  }

  [data-type='bool'] {
    width: 100% !important;
  }
}

.section-without-title {
  padding-top: 16px;
}

.page {
  .absolute(0, 0, 0, 0);
}

.settings-container {
  width: 100%;
  height: 100%;
  position: relative;
  left: 16px;
  padding-right: 16px;

  :global(.ant-form-item-label) {
    padding: 0px !important;
  }
}

.mode-toggle {
  display: flex;
  margin-top: 6px;
  margin-right: 8px;

  [data-type='toggle'] {
    margin-top: 2px;
    margin-left: 8px;
  }
}

.add-destination {
  margin: 0px;
}

.add-destination-btn {
  width: 100%;
  border: 1px dashed var(--border);
  border-radius: 4px;
  min-height: 58px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  position: relative;
  transition: border 0.3s, box-shadow 0.3s;

  &:hover {
    border-color: (var(--button));
    box-shadow: 0 0 50px rgba(255, 255, 255, 0.1) inset;
  }
}

.right-text {
  .margin-top(4);
  text-align: right;
}

.success-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.spacer {
  width: 1px;
  height: 32px;
}

.prime {
  position: absolute;
  right: 16px;
  font-style: italic;
  color: var(--prime-hover);
}

.banner-wrapper {
  flex: 1;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.banner {
  margin-right: 5px;
  height: 32px !important;
  width: unset !important;
}

.destination-mode {
  padding-right: 25px !important;
  padding-left: 25px !important;
}

.feature-toggle {
  display: flex;
  align-items: center;
  justify-content: space-between;

  :global(.ant-checkbox-wrapper) {
    color: var(--title);
  }
}

.feature-checkbox {
  :global(.ant-checkbox-checked .ant-checkbox-inner) {
    background-color: var(--secondary-checkbox);
    border-color: var(--secondary-checkbox);
  }
}

.primary-chat {
  border: 0px;
  padding-bottom: 10px;
  font-weight: 500;
  color: var(--secondary-bg);

  :global(.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
    border: 0px !important;
  }

  :global(.ant-form-item) {
    margin: 0px;
  }

  :global(.ant-select.ant-select-single.ant-select-show-arrow) {
    width: unset !important;
  }

  :global(.anticon) {
    color: var(--title);
  }

  :global(.ant-select-selection-item) {
    color: var(--title);
  }

  :global(.ant-form-item-label) {
    text-align: left;
    color: var(--title);
    font-weight: 400;
  }

  &.disabled {
    :global(.ant-form-item-label > label) {
      color: var(--button-hover) !important;
    }

    :global(.ant-select-disabled .ant-select-selector) {
      background: unset !important;
      color: var(--button-hover) !important;
    }

    :global(.ant-select-selection-item) {
      color: var(--button-hover) !important;
    }

    :global(.anticon) {
      color: var(--button-hover) !important;
    }
  }
}

.column-header {
  font-size: 16px;
  display: flex;
  flex-direction: row;
  flex: 1;
  width: 100%;
  padding: 15px 0px 15px 15px;

  :global(.ant-form-item) {
    margin-bottom: 0px;
  }

  :global(.ant-row) {
    align-items: center;
  }

  &.ultra-column-header {
    padding: 15px;
  }
}

.switcher {
  justify-self: flex-end;
  color: var(--background);

  :global(.ant-form-item-label) {
    display: none;
  }

  :global(.ant-switch-small) {
    min-width: 36px;
    height: 21px;
    line-height: 21px;
  }

  :global(.ant-switch-small .ant-switch-handle) {
    width: 15px;
    height: 15px;
    top: 3px;
    left: 3px;
  }

  :global(.ant-switch-checked) {
    background: var(--title);
  }

  :global(.ant-switch-small.ant-switch-checked .ant-switch-handle) {
    left: calc(100% - 15px - 3px) !important;
  }

  :global(.ant-switch-inner i) {
    color: var(--background);
    display: flex;
    align-self: center;
  }
}

.advanced-settings-switch {
  justify-self: flex-end;
  color: var(--background);

  :global(.ant-form-item-label) {
    display: none;
  }

  :global(.ant-switch-small) {
    min-width: 36px;
    height: 21px;
    line-height: 21px;
  }

  :global(.ant-switch-small .ant-switch-handle) {
    width: 15px;
    height: 15px;
    top: 3px;
    left: 3px;
  }

  :global(.ant-switch-checked) {
    background: var(--title);
  }

  :global(.ant-switch-small.ant-switch-checked .ant-switch-handle) {
    left: calc(100% - 15px - 3px) !important;
  }

  :global(.ant-switch-inner i) {
    color: var(--background);
    display: flex;
    align-self: center;
  }
}

.error-alert {
  color: #ff6f5b;
  width: 600px;
  border-radius: 4px;
  margin: 0 auto;
  text-align: left !important;

  :global(.ant-message-error) {
    display: flex;
    align-items: center;
  }

  :global(.ant-message-error .anticon) {
    color: #ff6f5b;
    margin-right: 10px;
  }
}

.alert-content {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.confirm-btn {
  width: 141.25px;
}

.toggle-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  &.shiftEnabled {
    min-height: 50px;
  }
}

.dual-output-alert {
  transform: translateY(-100px);
  transition: transform 0.3s, visibility 0.3s;
  font-size: 13px;
  border-radius: 6px;
  padding: 8px;
  margin: 15px 15px 0px 15px;
  background-color: rgba(23, 36, 45, 0);
  color: rgba(23, 36, 45, 0);
  visibility: hidden;

  &.error {
    background-color: #ff6f5b14;
    color: #ff6f5b;
    transform: translateY(0px);
    visibility: visible;
  }
}

.column-content {
  transition: transform 0.3s;
  height: 58%;

  &.alert-closed {
    transform: translateY(-70px);
    z-index: -1;
  }

  &.alert-open {
    transform: translateY(0px);
    z-index: 0;
  }
}

.switcher-wrapper {
  height: 100%;
}

